--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,9 @@ matrix:
   include:
 #    - php: '5.5'
 #    - php: '5.6'
-#    - php: '7.0'
-    - php: '7.1'
-    - php: hhvm
+    - php: '7.0'
+#    - php: '7.1'
+#    - php: hhvm
   allow_failures:
     - php: hhvm
 
