--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -7,7 +7,7 @@ parameters:
     database_port: null
     database_name: apiRest
     database_user: root
-    database_password: root
+    database_password: ~
 
     # You should uncomment this if you want use pdo_sqlite
     # database_path: "%kernel.root_dir%/data.db3"
