--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,8 @@ matrix:
   # Fast finish allows to set the build as "finished" even if the "allow_failures" matrix elements are not finished yet.
   fast_finish: true
   include:
-#    - php: '5.5'
-#    - php: '5.6'
     - php: '7.0'
     - php: '7.1'
-#    - php: hhvm
   allow_failures:
     - php: hhvm
 
@@ -45,7 +42,7 @@ install:
 
 # Run script
 script:
-  - phpunit
+  - script: sh test_luncher.sh
 
 # After a build, send email notification with the build results
 notifications:
