--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -6,7 +6,7 @@ parameters:
     database_host: 127.0.0.1
     database_port: null
     database_name: apiRest
-    database_user: root
+    database_user: travis
     database_password: ~
 
     # You should uncomment this if you want use pdo_sqlite
