--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ env:
 # Update composer
 before-install:
   - composer self-update
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS apiresttoken_test;'
 
 # Install composer dependencies,
 # Create database, schema and fixtures
