--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -5,7 +5,7 @@ parameters:
 
     database_host: 127.0.0.1
     database_port: null
-    database_name: apirestoken_test
+    database_name: apiresttoken_test
     database_user: travis
     database_password: ~
 
