--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,7 @@ matrix:
     - php: '7.1'
   allow_failures:
     - php: hhvm
-before_script :
-  - sh -c "mysql -e 'CREATE DATABASE cakephp_test;'"
+
 # Define an environment variable
 env:
   - SYMFONY_VERSION="3.1.*" DB=mysql
@@ -38,14 +37,15 @@ before-install:
 # Create database, schema and fixtures
 install:
   - composer install
-  - cp app/config/parameters.yml.dist app/config/parameters.yml
-  - php bin/console doctrine:database:create --env=test
-  - php bin/console doctrine:schema:create --env=test
-  - php bin/console doctrine:fixtures:load -n --env=test
+#  - cp app/config/parameters.yml.dist app/config/parameters.yml
+#  - php bin/console doctrine:database:create --env=test
+#  - php bin/console doctrine:schema:create --env=test
+#  - php bin/console doctrine:fixtures:load -n --env=test
 
 # Run script
 script:
-  - script: sh test_luncher.sh
+  - sh -c "mysql -e 'CREATE DATABASE cakephp_test;'"
+  - sh test_luncher.sh
 
 # After a build, send email notification with the build results
 notifications:
