--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -10,7 +10,7 @@ framework:
 
 doctrine:
     dbal:
-        dbname:   "%database_name%_test"
+        dbname:   "%database_name%"
 
 web_profiler:
     toolbar: false
