--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-# Project language
-language: php
-
 # Allows use container-based infrastructure
 sudo: false
 
@@ -18,6 +15,7 @@ matrix:
   # Fast finish allows to set the build as "finished" even if the "allow_failures" matrix elements are not finished yet.
   fast_finish: true
   include:
+    - php: '7.0'
     - php: '7.1'
     - hhvm
     - nightly
