--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ matrix:
     - php: '7.1'
 
 # Define an environment variable
-env:
-  - SYMFONY_VERSION="3.1.*" DB=mysql
+#env:
+#  - SYMFONY_VERSION="3.1.*" DB=mysql
 
 # Update composer
 before-install:
